--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -20,7 +20,7 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    color: #e0e0e0;
+    color: #283739;
     width: 80px;
     height: 40px;
     text-align: center;
@@ -30,5 +30,6 @@
 
 .links:hover{
     font-weight: bolder;
-    color: wheat
+    color: #e0e0e0;
+    background-color: #2c5d63;
 }
