--- a/client/src/views/CreateRecipe/CreateRecipe.module.css
+++ b/client/src/views/CreateRecipe/CreateRecipe.module.css
@@ -76,7 +76,7 @@
 
 
 .wrapper {
-    border: 2px solid black;
+    border: 2px solid #283739;
     display: grid;
     grid-template-areas: "a a b"
                          "c c c"
@@ -87,7 +87,7 @@
                          "f f f"
                          "f f f"
                          "g g g";
-    border-radius: 5px;
+    border-radius: 0 0 5px 5px;
     background-color: #2c5d63;
     width: 650px;
     height: 500px;
@@ -110,16 +110,17 @@
 
 .submit {
     grid-area: g;
-    background-color: rgb(7, 147, 7);
-    padding: 5px 10px;
+    background-color:#283739;
+    color:#e0e0e0;
+    padding: 0px 10px;
     border-radius: 10px;
     font-size: medium;
     font-family: 'Segoe UI', Tahoma;
-    margin: 2px auto;
+    margin: 8px auto;
 }
 
 .submit:hover{
-    color: white;
+    color:#e0e0e0;
     transform: scale(1.05);
     cursor: pointer;
 }
@@ -132,6 +133,8 @@
     width: 100%;
     height: 60px;
     border-radius: 4px 4px 0 0;
+    color: #283739;
+    border: 2px solid #283739;
 }
 
 
@@ -145,7 +148,7 @@
 }
 
 .diets {
-    border: 2px solid black;
+    border: 2px solid #283739;
     border-radius: 15px;
     height: fit-content;
 }
@@ -157,6 +160,7 @@
     text-align: left;
     border-radius: 0 0 12px 12px;
     height: 130px;
+    color: #283739
 }
 
 .wrapperDiets > label > input:hover{
@@ -165,32 +169,30 @@
 
 
 .uploadButton {
-    border: 1px solid #ccc;
+    border: 1px solid #e0e0e0;
     display: inline-block;
     padding: 6px 12px;
     cursor: pointer;
     border-radius: 5px;
+    color:#e0e0e0
 }
 
 
 .uploadButton:hover {
-    background-color: rgba(233, 25, 25, 0.863);
-    color: white
+    background-color: #283739;
+    color:#e0e0e0;
+    cursor: pointer
 }
 
 .errorForm{
-    border: 2px solid red;
-    background-color: rgb(240, 229, 76);
-}
-
-.top {
-    background-color: goldenrod;
-    width: 100%;
+    border: 2px solid rgb(242, 50, 50);
 }
 
 .mandatory{
     margin: 0;
     padding: 3px;
     text-align: center;
+    color:#283739;
+    font-style: italic;
 }
 
