max requests reached warning message added. Styles applied to message

--- a/client/src/views/DetailsRecipe/DetailsRecipe.module.css
+++ b/client/src/views/DetailsRecipe/DetailsRecipe.module.css
@@ -154,3 +154,14 @@
 .noSteps {
     display: none;
 }
+
+.noResults {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #e0e0e0;
+    font-family: 'Segoe UI', Tahoma;
+    height: 100vh;
+    background-color: #1c3d42;
+    width: 100%
+}
