--- a/client/src/views/Home/Home.module.css
+++ b/client/src/views/Home/Home.module.css
@@ -61,6 +61,21 @@
     padding: 15px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.searchWrapper > button {
+    background-color: #a2c11c;
+    color: #283739;
+    border-radius: 5px;
+    padding: 2px 8px;
+    font-size: 15px
+}
+
+.searchWrapper > button:hover{
+    cursor: pointer;
+    background-color: #2c5d63;
+    color: #c1c1c1;
 }
 
 .searchDiv {
@@ -75,6 +90,7 @@
     display: flex;
     justify-content: space-around;
     background-color: #e0e0e0;
+    width: 100%;
 }
 
 .noSelectedOption{
